Include ancestors of metadata concepts.